--- a/frontend-cc/index.html
+++ b/frontend-cc/index.html
@@ -7,7 +7,9 @@
     <title>Content Calender</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <ul id="content-list"></ul>
+    </div>
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
